# realpolitik

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  Taskfile.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
.github/workflows/: delphi.yml  update-intel.yml
apps/: README.md
apps/aegis/: README.md  pubspec.yaml
apps/agora/: README.md
apps/argus/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.cron.yml  docker-compose.yml  pyproject.toml  pytest.ini
apps/argus/data/: cameo_codes.txt
apps/argus/docs/: DEPLOYMENT.md  FEATURE_COMPARISON.md  FEATURE_PARITY_STATUS.md  GRAPH_FIRST_SYNTHESIS.md  SYNTHESIS_ENHANCEMENTS.md  SYSTEM_ARCHITECTURE_COMPLIANCE.md
apps/argus/k8s/: cronjob.yaml
apps/argus/migrations/: 20260201000000_outbox_pattern.sql
apps/argus/scripts/: docker-run.sh
apps/argus/src/argus/: __init__.py  config.py  locations.py  main.py  run_local.py
apps/argus/src/argus/cache/: __init__.py  articles.py  geocodes.py  redis.py
apps/argus/src/argus/enrichment/: __init__.py  ai_client.py  article.py  entities.py  geocoding.py  openrouter_client.py  prompts.py  synthesis.py
apps/argus/src/argus/graph/: __init__.py  edges.py  embeddings.py  nodes.py  resolution.py
apps/argus/src/argus/models/: __init__.py  articles.py  entities.py  events.py  locations.py
apps/argus/src/argus/notifications/: __init__.py  push.py
apps/argus/src/argus/pipeline/: __init__.py  causal_linking.py  graph_processing.py  grouping.py  processing.py
apps/argus/src/argus/scripts/: backfill_causal_links.py  backfill_graph.py  cleanup_duplicates.py  fix_hit_counts.py  graph_stats.py  seed_aliases.py  sync_from_r2.py  test_push.py  visualize_graph.py
apps/argus/src/argus/sources/: __init__.py  newsapi.py
apps/argus/src/argus/storage/: __init__.py  base.py  database.py  local.py  supabase.py
apps/argus/src/argus/utils/: __init__.py  hashing.py  text.py  validation.py
apps/argus/tests/: __init__.py  conftest.py  test_ai_client.py  test_article_cache.py  test_cdc_outbox_pattern.py  test_config_openrouter.py  test_enrichment.py  test_entity_extraction.py  test_error_handling.py  test_event_merging.py  test_graph_edges.py  test_graph_embeddings.py  test_graph_nodes.py  test_graph_processing.py  test_graph_resolution.py  test_integration.py  test_notifications.py  test_openrouter_client.py  test_openrouter_migration.py  test_openrouter_only.py  test_regions.py  test_rss_feeds.py  test_storage.py
apps/cassandra/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/cassandra/docs/: FINAL_MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  OPENROUTER_VERIFICATION.md  SYNTHESIS_PRESERVATION_VERIFICATION.md  TESTING.md
apps/cassandra/k8s/: deployment.yaml
apps/cassandra/src/: __init__.py  ai_client.py  analysis_engine.py  config.py  consumer.py  context_assembly.py  database_queries.py  graph_queries.py  main.py  prompts.py  storage.py  synthesis.py
apps/cassandra/src/models/: events.py  requests.py
apps/cassandra/tests/: __init__.py  test_analysis_engine.py  test_consumer.py  test_delphi_integration.py  test_integration.py  test_minimal_demo.py  test_structure_only.py
apps/chronos/: README.md  go.mod  go.sum
apps/clio/: README.md
apps/delphi/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/delphi/src/delphi/: __init__.py  main.py  main_simple.py
apps/delphi/src/delphi/api/: analysis.py  entities.py  events.py  health.py  v1.py  websockets.py
apps/delphi/src/delphi/core/: auth.py  config.py  error_handlers.py  middleware.py  query_router.py  rate_limiting.py
apps/delphi/tests/: README.md  __init__.py  conftest.py  run_tests.sh
apps/delphi/tests/integration/: test_api_endpoints.py
apps/delphi/tests/unit/: test_auth.py  test_client_library.py  test_config.py  test_query_routing.py  test_rate_limiting.py  test_schemas.py
apps/hermes/: README.md
apps/pythia/: README.md
apps/styx/: Dockerfile  README.md  go.mod  traefik-config.yml
apps/urania/: README.md
atlas/: README.md  config.toml
atlas/migrations/: 20260126185244_atlas_foundation.sql  20260126202335_push_subscriptions.sql  20260126205430_user_state.sql  20260126220000_inbox_preferences.sql  20260127000000_constellation_enhancements.sql  20260127100000_search_entities_rpc.sql  20260127200000_entity_rpc_functions.sql  20260128000000_stripe_subscriptions.sql  20260128100000_cameo_insert_event.sql  20260201000000_reactions_user_id.sql  20260201100000_fix_inbox_defaults.sql
docs/: naming-conventions-doc.md  realpolitik-design-doc.md  repo-structure.md  system-architecture.md
infra/: README.md
libs/realpolitik-clients/: README.md
libs/realpolitik-observability/: README.md
libs/realpolitik-schema/: README.md
plans/: magic-link-email-template.html  otp-email-template.html  supabase-auth-setup.md
public/: manifest.json  robots.txt  sw.js
shared/: event_schema.json
src/__tests__/: apiAuth.test.ts  deduplication.test.ts  errorHandling.test.ts  notificationRules.test.ts  notificationTypes.test.ts  pushApi.test.ts  quietHours.test.ts  securityValidation.test.ts  serviceWorker.test.ts  setup.ts  shouldNotify.test.ts
src/app/: ClientPage.tsx  apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
src/components/: AboutModal.tsx  BriefingModal.tsx  ConsensusBadge.tsx  Dashboard.tsx  DeviceList.tsx  ErrorBoundary.tsx  EventsSidebar.tsx  InstallPrompt.tsx  NotificationPrompt.tsx  NotificationSettings.tsx  SettingsModal.tsx  SourceTimeline.tsx  SplashScreen.tsx  WorldMap.tsx
src/contexts/: AuthContext.tsx
src/hooks/: buildEventGeoJSON.ts  eventLayerConfigs.ts  useAutoRotate.ts  useBatchReactions.tsx  useBriefingChat.ts  useEntityEvents.ts  useEventEntities.ts  useEventLayers.ts  useEventSelection.ts  useEventStates.ts  useEvents.ts  useInboxPreferences.ts  useMediaQuery.ts  useNavigationStack.ts  useNewEvents.ts  useNotificationInbox.ts  (+6 more)
worker/: Dockerfile  fix_locations.py  main.py  regions.py  requirements.txt
(+158 files in other folders)
