[tool.poetry]
name = "cassandra"
version = "1.0.0"
description = "Cassandra - Fallout Analysis Engine for Realpolitik"
authors = ["Realpolitik Team <team@realpolitik.world>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
httpx = "^0.25.0"
pydantic = "^2.0.0"
python-json-logger = "^2.0.0"

# Database Drivers
neo4j = "^5.15.0"
qdrant-client = "^1.7.0"

# AI/ML - OpenRouter (OpenAI client library configured for OpenRouter API)
openai = "^1.3.0"

# Observability & Monitoring
structlog = "^23.0.0"
prometheus-client = "^0.17.0"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
typing-extensions = "^4.5.0"
dataclasses-json = "^0.6.0"

# Realpolitik Ecosystem
# Add local path dependency for realpolitik-clients
realpolitik-clients = {path = "../../../libs/realpolitik-clients", develop = true}
realpolitik-schema = {path = "../../../libs/realpolitik-schema", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "qdrant_client.*",
    "pika.*",
    "redis.*",
    "openai.*",          # OpenAI client library for OpenRouter access
    "prometheus_client.*"
]
ignore_missing_imports = true